syntax = "proto3";

option csharp_namespace = "ESchool.ClassRegister.Grpc";

service UserService {
  rpc GetStudentOfClass(StudentsOfClassRequest) returns (UserListResponse);
  rpc GetTeachersOfClassSchoolYearSubject(TeachersOfClassSchoolYearSubjectRequest) returns (UserListResponse);
}

service ClassSchoolYearSubjectService {
  rpc GetDetails(ClassSchoolYearSubjectDetailsRequest) returns (ClassSchoolYearSubjectDetailsResponse);
}

message ClassSchoolYearSubjectDetailsRequest {
  string id = 1;
}

message ClassSchoolYearSubjectDetailsResponse {
  string id = 1;
  string schoolYearId = 2;
  string classId = 3;
  string subjectId = 4;
  repeated string studentIds = 5;
  repeated string teacherIds = 6;
}

message StudentsOfClassRequest {
  string classId = 1;
}

message TeachersOfClassSchoolYearSubjectRequest {
  string classSchoolYearSubjectId = 1;
}

message UserListResponse {
  repeated string userIds = 1;
}